fdo#37529 clear DataColumns read-only information when we clear DataColumns

Change-Id: I6f3b4f1646df1244d97ae98f56ba054bc26e3314